--- a/wp-content/themes/seolizer/layouts/main.css
+++ b/wp-content/themes/seolizer/layouts/main.css
@@ -18,15 +18,14 @@
 #call_modal{
     display:none;
     position: fixed;
-    height:380px;
     border:3px solid grey;
     z-index: 9999;
-    background-color:white;
-    padding:40px;
-    border-radius:25px;
-    left:35%;
-    width:30%;
+    width:50%;
+    padding:0px;
+    left:25%;
     top: 20%;
+    margin:0px;
+    overflow: auto;
 }
 .modal-img{
     left:10%;
@@ -35,6 +34,7 @@
 .modal-img img{
     width:100%;
 }
+/*Close modal button*/
 .close{
     float:right;
     font-size:14px;
@@ -43,17 +43,120 @@
     color:red;
     cursor:pointer;
 }
+/*end*/
 #overlay {
-    z-index:3; /* пoдлoжкa дoлжнa быть выше слoев элементoв сaйтa, нo ниже слoя мoдaльнoгo oкнa */
-    position:fixed; /* всегдa перекрывaет весь сaйт */
-    background-color:#000; /* чернaя */
-    opacity:0.8; /* нo немнoгo прoзрaчнa */
-    -moz-opacity:0.8; /* фикс прозрачности для старых браузеров */
+    z-index:3;
+    position:fixed;
+    background-color:#000;
+    opacity:0.8;
+    -moz-opacity:0.8;
     filter:alpha(opacity=80);
     width:100%;
-    height:100%; /* рaзмерoм вo весь экрaн */
-    top:0; /* сверху и слевa 0, oбязaтельные свoйствa! */
+    height:100%;
+    top:0;
     left:0;
     cursor:pointer;
-    display:none; /* в oбычнoм сoстoянии её нет) */
+    display:none;
 }
+
+
+/*callback modal*/
+.call_back_submit{
+    color:#fff;
+    font-size:15px;
+    font-weight:700;
+    padding:0px;
+    text-transform: uppercase;
+    border:2px solid #fff;
+    cursor:pointer;
+    text-align:center;
+    background-color:transparent;
+    width:230px;
+    height:54px;
+    line-height:50px;
+    margin-left:18px;
+}
+.call_back_submit:hover{
+    background-color:#22acbd;
+}
+.call_back_input{
+    width:200px;
+    height:44px;
+    padding:10px;
+    color:black;
+}
+/*end*/
+
+/*Order modal*/
+.order_btn{
+    border:2px solid #fff;
+    text-align:center;
+    background-color:transparent;
+    display:inline-block;
+    vertical-align: top;
+    font-size:16px;
+    font-weight:700;
+    background-color:transparent;
+    color:#fff;
+    height:54px;
+    width:190px;
+}
+.irs-single{
+    background: none;
+}
+.irs-min{
+    display: none;
+}
+.irs-max{
+    display: none;
+}
+.item_count_right{
+    float:right;
+    margin-left:150px;
+}
+.irs-slider{
+    background: 0 0;
+    background-color: #ffd05b;
+    width:26px;
+    height: 26px;
+    border:3px solid #fff;
+    border-radius: 50%;
+    cursor:pointer;
+}
+
+
+.irs-line-mid, .irs-line{
+    background-color: #fff;
+}
+.irs-line-right{
+    border-radius: 5px;
+    background-color: #fff;
+}
+.irs-line-left, .irs-bar-edge{
+    border-radius : 5px;
+}
+.irs-bar, .irs-bar-edge, .irs-line-left, .irs-line-mid, .irs-line-right{
+    background: none;
+}
+
+.order_service_list span{
+    color:#fff;
+    font-size:16px;
+    font-weight:300;
+    line-height: 1.25;
+    margin-bottom:20px;
+
+}
+.order_service_list input {
+    width:19px;
+    height:19px;
+    background-color: #fff;
+    left:0;
+    top:0;
+    background-color: #fff;
+}
+.order_service_list input[type=checkbox]:checked {
+    background-color: #fff !important;
+    color: #ffffff !important;
+}
+/*end order modal*/
